# abusedetector

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  validate-release.yml
.zed/: settings.json
benches/: parsing_benchmarks.rs
corpus/: sample1.eml  sample10.eml  sample11.eml  sample12.eml  sample13.eml  sample3.eml  sample4.eml  sample5.eml  sample6.eml  sample7.eml  sample8.eml  sample9.eml
docs/: IPv6_SUPPORT.md  RELEASE_PROCESS.md
schema/: output.json
scripts/: test-release.sh
src/: analysis.rs  cli.rs  config.rs  domain_utils.rs  emails.rs  eml.rs  errors.rs  escalation.rs  facade.rs  lib.rs  main.rs  netutil.rs  output.rs  retry.rs  structured_output.rs  styled_output.rs  whois.rs
src/app/: mod.rs
src/sources/: mod.rs
tests/: integration_tests.rs
