[package]
name = "abusedetector"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
trust-dns-resolver = "0.23"
regex = "1"
once_cell = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = { version = "0.8", features = ["chrono"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
anstyle = "1.0"
reqwest = { version = "0.12", features = ["json"] }
atty = "0.2"
futures = "0.3"
ipnetwork = "0.20"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.0"
criterion = "0.5"

[[bench]]
name = "parsing_benchmarks"
harness = false
