[package]
name = "abusedetector"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "process",
] }
trust-dns-resolver = "0.23"
regex = "1"
once_cell = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = { version = "1.0", features = ["chrono04"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
anstyle = "1.0"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
atty = "0.2"
futures = "0.3"
ipnetwork = "0.21"
lazy_static = "1.4"
thiserror = "2"
async-trait = "0.1"
psl = { version = "2.1.143", features = ["helpers"] }
whois-rust = { version = "1.6.0", features = ["tokio"] }
idna = "1"

mail-parser = "0.11"

[target.'cfg(windows)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tempfile = "3.23"
criterion = "0.7"


[[bench]]
name = "parsing_benchmarks"
harness = false
